2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBCommand.generated.cs: First attempt of implementing
	  deletion of a command from a lane.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs:
	* DBCommand.generated.cs: Added support for per-command
	  timeout instead of having a 60-minute timeout for all
	  commands.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SqlToCSharp.cs: Fix this after lowercasing "work" in
	  database.sql.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Updater.cs:
	* SVNUpdater.cs:
	* Configuration.cs: Add support for checking a directory for
	  commit messages.

2009-03-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBRevisionWork.cs: If a step is being executed, and a host
	  is looking for work, include the step being executed, since
	  most probably the execution failed somehow (machine reboot,
	  builder crash, etc), and we'll just try to do it again.

2009-03-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: When a process needs to be killed, kill all
	  descendent processes too.

	* ProcessHelper.cs: Added.

2009-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ChangeLog: Added.

	* DBWorkView2.cs: Disable warnings about fields accessed using
	  reflection.
