@@ -1,5 +1,10 @@
 2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Builder.cs: Remove any paths that were set for Builder.exe
+	  to work before executing any commands.
+
+2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* DBCommand.generated.cs: First attempt of implementing
 	  deletion of a command from a lane.
 
